# SVGRasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  configuration.json  xcode.sh
SVGRasterizer/: SVGParser.cpp  main.cpp
SVGRasterizer.xcodeproj/: project.pbxproj
include/SVGRasterizer/: Bi_dir_unordered_map.hpp  Config_reader.hpp  Config_writer.hpp  Configuration.hpp  Svg_element.hpp  Svg_parser.hpp
libs/Catch/: catch.hpp
src/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Config_reader.cpp  Config_reader.h  Config_writer.cpp  Config_writer.h  Config_writer.hpp  Configuration.cpp  Configuration.h  Configuration.hpp  SVGAttribute.hpp  SVGElement.hpp  SVGParser.cpp  SVGParser.hpp  SvgElement.h  SvgParser.cpp  SvgParser.h  Svg_element.cpp  Svg_element.h  Svg_element.hpp  Svg_element_processor.cpp  Svg_element_processor.hpp  Svg_parser.cpp  Svg_parser.h  Utils.hpp  main.cpp
test/: CMakeLists.txt  Test_Bi_dir_unordered_map.cpp  Test_Svg_parser.cpp
